build: package only the required JDK runtime modules